cargo-features = ["profile-rustflags"]

[package]
name = "emulator-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# boxcar = "0.2.4"
cfg-if = "1.0.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-deque", "crossbeam-queue"] }
env_logger = "0.11.3"
eyre = "0.6.12"
futures = "0.3.30"
ijson = { version = "0.1.3", features = ["ctor"] }
itertools = "0.12.1"
num_cpus = "1.16.0"
postcard = { version = "1.0.8", features = ["alloc"] }
rayon = "1.10.0"
regex = "1.10.4"
# rkyv = { version = "0.7.44", features = ["validation"] }
serde = { version = "1.0.197", features = ["alloc", "derive", "rc"] }
serde_json = "1.0.115"
serde_path_to_error = "0.1.16"
serde_yaml = "0.9.34"
sonic-rs = "0.3.4"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
v8 = "0.89.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

# [target.'cfg(not(target_env = "msvc"))'.dependencies]
# jemallocator = "0.3.2"

[[bench]]
name = "load"
harness = false

[profile.release]
debug = true

[profile.dev]
debug = true
rustflags = [
"-Ctarget-feature=+sse3,+avx,+avx2",
]
